- Fix acquired roles email address lookup - add locales
svn path=/collective.contentrules.mailtolocalrole/trunk/; revision=72785

--- a/collective/contentrules/mailtolocalrole/HISTORY.txt
+++ b/collective/contentrules/mailtolocalrole/HISTORY.txt
@@ -1,4 +1,10 @@
 0.5 unreleased
 --------------
 
-Import basic version from a client project
+- Add locales [fredvd]
+
+- Fix acquired roles checking & look up email addresses [fredvd]
+
+- Add checking for acquired roles [fredvd]
+
+- Import basic version from a client project [fredvd]
