--- a/collective/contentrules/mailtolocalrole/locales/nl/LC_MESSAGES/collective.contentrules.mailtolocalrole.po
+++ b/collective/contentrules/mailtolocalrole/locales/nl/LC_MESSAGES/collective.contentrules.mailtolocalrole.po
@@ -1,6 +1,3 @@
-# --- PLEASE EDIT THE LINES BELOW CORRECTLY ---
-# SOME DESCRIPTIVE TITLE.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
@@ -15,7 +12,7 @@ msgstr ""
 "Language-Code: en\n"
 "Language-Name: English\n"
 "Preferred-Encodings: utf-8 latin1\n"
-"Domain: collective.contentrules.mailtolocalrole\n"
+"Domain: DOMAIN\n"
 
 #: ./actions/mail.py:37
 msgid "Acquired Roles"
@@ -23,17 +20,17 @@ msgstr ""
 
 #: ./actions/mail.py:63
 msgid "Email report to users with local role ${localrole} on the object"
-msgstr ""
+msgstr "Email een rapport naar gebruikers met de lokale rol ${localrole} op het object"
 
 #: ./actions/mail.py:31
 msgid "Local Role"
-msgstr ""
+msgstr "lokale rol"
 
 #: ./actions/mail.py:32
 msgid "Select a local role. The action will look up the all Plone site users who explicitly have this local role on the object and send a message to their email address."
-msgstr ""
+msgstr "Kies een lokale rol. De actie stuurt alle Plone gebruikers die deze lokale rol op het object hebben een email."
 
 #: ./actions/mail.py:38
 msgid "Should users that have this role as an acquired role also receive this email?"
-msgstr ""
+msgstr "Ontvangen gebruikers met een impliciete (overgeërfde) lokale rol ook een email?"
 
