restructured text fixes
svn path=/collective.contentrules.mailtolocalrole/trunk/; revision=76910

--- a/collective/contentrules/mailtolocalrole/HISTORY.txt
+++ b/collective/contentrules/mailtolocalrole/HISTORY.txt
@@ -1,5 +1,5 @@
-0.7 2008-12-05 (Sinterklaas!)
---------------
+0.7 2008-12-05 (Sinterklaas)
+----------------------------
 
 - Added Italian localization [paulox]
 
