Fixed error when used on Plone 4: passing 'From' to secureSend is not needed in Plone 3 and breaks in Plone 4.
svn path=/collective.contentrules.mailtolocalrole/trunk/; revision=228227

--- a/collective/contentrules/mailtolocalrole/HISTORY.txt
+++ b/collective/contentrules/mailtolocalrole/HISTORY.txt
@@ -1,7 +1,9 @@
 0.8 unreleased
 --------------
 
-- 
+- Fixed error when used on Plone 4: passing 'From' to secureSend is
+  not needed in Plone 3 and breaks in Plone 4.
+  [maurits]
 
 
 0.7 2008-12-05 (Sinterklaas)
