--- a/collective/contentrules/mailtolocalrole/HISTORY.txt
+++ b/collective/contentrules/mailtolocalrole/HISTORY.txt
@@ -2,7 +2,9 @@
 ----------------
 
 - use z3c.autoinclude plugin
-
+- Plone 4.1 compatibility (fixes
+  http://plone.org/products/collective-contentrules-mailtolocalrole/issues/5)
+  [khink]
 
 1.1 (2011-01-07)
 ----------------
