include global roles
svn path=/collective.contentrules.mailtolocalrole/branches/issue-4-mail-global-roles/; revision=245936

--- a/collective/contentrules/mailtolocalrole/HISTORY.txt
+++ b/collective/contentrules/mailtolocalrole/HISTORY.txt
@@ -5,6 +5,9 @@
 - Plone 4.1 compatibility (fixes
   http://plone.org/products/collective-contentrules-mailtolocalrole/issues/5)
   [khink]
+- Add checkbox for including members with global roles in mail (fixes
+  http://plone.org/products/collective-contentrules-mailtolocalrole/issues/4)
+  [khink]
 
 1.1 (2011-01-07)
 ----------------
