--- a/collective/contentrules/mailtolocalrole/HISTORY.txt
+++ b/collective/contentrules/mailtolocalrole/HISTORY.txt
@@ -1,6 +1,13 @@
 1.3 (unreleased)
 ----------------
 
+- Officially superceded by collective.contentrules.mailtorole.
+  [maurits]
+
+- Moved to
+  https://github.com/collective/collective.contentrules.mailtolocalrole
+  [maurits]
+
 1.2 (2011-10-28)
 ----------------
 
